--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -15,6 +15,7 @@
   "internal_error": "内部错误",
   "status_code_error": "HTTP 状态码错误",
   "uncaught_internal_error": "未被捕捉的内部错误",
+  "flood_wait_prompt": "你的操作太快了，导致 bot 超过了 Telegram 的速率限制，请慢一点。",
 
   "permission_denied_not_bot_manager": "此命令只可由机器人的管理员使用。",
   "permission_denied_not_chat_admin": "此命令只可由群/频道管理员使用。",
