--- a/src/i18n/zh-yue.json
+++ b/src/i18n/zh-yue.json
@@ -17,6 +17,7 @@
   "uncaught_internal_error": "冇捉到嘅內部錯誤",
   "flood_wait_prompt": "你操作得太快喇，搞到機械人超出咗 Telegram 嘅速率限制。唔該慢少少。",
   "edit_conflict_prompt": "你操作得太快喇，搞到操作衝突。唔該慢少少。",
+  "callback_already_running_prompt": "你已經請求咗其他命令，唔該等佢搞掂再來過。",
 
   "permission_denied_not_bot_manager": "只有機械人嘅管理員先畀用呢條命令。",
   "permission_denied_not_chat_admin": "只有谷/台嘅管理員先畀用呢條命令。",
