--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -15,6 +15,7 @@
   "internal_error": "内部错误",
   "status_code_error": "HTTP 状态码错误",
   "uncaught_internal_error": "未被捕捉的内部错误",
+  "operation_timeout_error": "操作超时",
   "flood_wait_prompt": "你的操作太快了，导致 bot 超过了 Telegram 的速率限制，请慢一点。",
   "edit_conflict_prompt": "你的操作太快了，导致操作冲突，请慢一点。",
   "callback_already_running_prompt": "你已经请求过其它命令，请等待它完成后重试。",
