--- a/src/i18n/zh-yue.json
+++ b/src/i18n/zh-yue.json
@@ -15,6 +15,7 @@
   "internal_error": "內部錯誤",
   "status_code_error": "HTTP 狀態碼錯誤",
   "uncaught_internal_error": "冇捉到嘅內部錯誤",
+  "operation_timeout_error": "操作超時",
   "flood_wait_prompt": "你操作得太快喇，搞到機械人超出咗 Telegram 嘅速率限制。唔該慢少少。",
   "edit_conflict_prompt": "你操作得太快喇，搞到操作衝突。唔該慢少少。",
   "callback_already_running_prompt": "你已經請求咗其他命令，唔該等佢搞掂再來過。",
