--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -33,6 +33,9 @@
         "permission_denied_not_in_private_chat": "This command can only be used in a private chat.",
         "permission_denied_not_member": "You are not in this group/channel, thus cannot use the bot.",
         "permission_denied_bot_not_member": "The bot is no longer in this group/channel, thus won't work here.",
+        "permission_denied_switch_pm": "Continue using the bot in private chat...",
+        "permission_denied_input_command": "Please input a command to continue...",
+        "permission_denied_no_direct_use": "This command should not be used directly. Use /set instead.",
         "promote_to_admin_prompt": "If you are an anonymous admin of this group, please promote the bot to an admin (no permission needed) to empower the bot to verify your identity.",
         "group_upgrade_needed_prompt": "Oops, your group hasn't been upgraded to a supergroup. Generally, the Telegram server should automatically perform this upgrade at some time, but if not, you have to upgrade it manually before you can use the bot.\nPlease follow these steps:\n1. Goto the group info, then click \"Manage group\"\n2. Change \"Chat history for new members\" to \"Visible\"\n3. Save chat history visibility setting\n4. Save all settings\n5. (Optional) If needed, you can change \"Chat history for new members\" to \"Hidden\" again\n6. Now you should be able to use the bot"
     },
@@ -47,7 +50,8 @@
         "subscription_list": "Subscription list",
         "processing": "Processing, please wait for a moment…",
         "canceled_by_user": "Canceled by user.",
-        "n_subscriptions_in_total": "%d subscriptions in total"
+        "n_subscriptions_in_total": "%d subscriptions in total",
+        "other_settings_button": "Other settings…"
     },
     "l10n_cmd_sub": {
         "sub_reply_feed_url_prompt_html": "Please reply the URL of an RSS feed. \nOr, you may use <code>/sub url1 url2 url3 …</code> to subscribe in bulk.",
@@ -109,6 +113,8 @@
         "style": "Style",
         "style_0": "RSStT",
         "style_1": "flowerss",
+        "set_custom_title_button": "Set custom title…",
+        "set_custom_interval_button": "Set custom interval (in minutes)…",
         "set_interval_prompt": "Please select a monitor interval.",
         "set_length_limit_prompt": "Please select a length limit.\n\nIf a post is longer than the limit OR cannot be sent in a single message, it will be send via Telegraph.\nIf sending via Telegraph fails, its title and link will be sent.",
         "length_limit_only_effective_if_send_mode_auto": "Length limit is effective only when send mode is auto."
@@ -132,9 +138,19 @@
         "deactivate_all_subs": "Deactivate all my subscriptions",
         "all_subs_are_deactivated": "All subscriptions are deactivated."
     },
+    "l10n_cmd_set_title": {
+        "cmd_set_title_usage_prompt_html": "Command usage: <code>/set_title sub_id title</code>\n\nNote: omit <code>title</code> to clear custom title (if previously set, otherwise get this prompt).",
+        "set_title_success": "The custom title of the subscription has been changed to: ",
+        "set_title_success_cleared": "The custom title of the subscription has been cleared."
+    },
+    "l10n_cmd_set_interval": {
+        "cmd_set_interval_usage_prompt_html": "Command usage: <code>/set_interval sub_id interval</code>\n\nNote: <code>interval</code> must be a positive integer in minutes (no need to include the unit).",
+        "set_interval_success_html": "The monitor interval of the subscription has been changed to <b>%d minutes</b>.",
+        "set_interval_failure_too_small_html": "The monitor interval must be greater than <b>%d minutes</b>."
+    },
     "l10n_administration": {
-        "test_cmd_usage_prompt_html": "Command usage: <code>/test RSS_URL entry_start_number(optional) entry_end_number(optional)</code>",
-        "set_option_cmd_usage_prompt_html": "Command usage: <code>/set_option key value</code>",
+        "cmd_test_usage_prompt_html": "Command usage: <code>/test RSS_URL entry_start_number(optional) entry_end_number(optional)</code>",
+        "cmd_set_option_usage_prompt_html": "Command usage: <code>/set_option key value</code>",
         "current_options": "Current options",
         "option_value_type": "Value type",
         "option_key_invalid": "The option key is invalid",
