--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -115,6 +115,7 @@
         "style_1": "flowerss",
         "set_custom_title_button": "Set the custom title…",
         "set_custom_interval_button": "Set custom interval (in minutes)…",
+        "set_custom_hashtags_button": "Set custom hashtags…",
         "set_interval_prompt": "Please select a monitor interval.",
         "set_length_limit_prompt": "Please select a length limit.\n\nIf a post is longer than the limit OR cannot be sent in a single message, it will be sent via Telegraph.\nIf sending via Telegraph fails, only its title and source will be sent.",
         "length_limit_only_effective_if_send_mode_auto": "The length limit is effective only when send mode is auto."
@@ -123,7 +124,8 @@
         "subscription_info": "Subscription info",
         "feed_title": "Feed title",
         "subscription_title": "Custom title",
-        "feed_url": "Feed URL"
+        "feed_url": "Feed URL",
+        "hashtags": "Hashtags"
     },
     "l10n_monitor_warn": {
         "feed_deactivated_warn": "The monitoring task had failed 100 consecutive times. Your subscription to the RSS feed has been deactivated.\nTo reactivate it, please use the /activate_subs command."
@@ -147,6 +149,12 @@
         "cmd_set_interval_usage_prompt_html": "Command usage: <code>/set_interval sub_id monitor_interval</code>\n\nNote: <code>monitor_interval</code> must be a positive integer in minutes (no need to include the unit).",
         "set_interval_success_html": "The monitor interval of the subscription has been changed to <b>%d minutes</b>.",
         "set_interval_failure_too_small_html": "The monitor interval must be greater than <b>%d minutes</b>."
+    },
+    "l10n_cmd_set_hashtags": {
+        "cmd_set_hashtags_usage_prompt_html": "Command usage: <code>/set_hashtags sub_id #hashtag1 #hashtag2 …</code>\n\nNote: if no hashtag provided, existing hashtags will be cleared (only if previously set, otherwise get this prompt).",
+        "set_hashtags_success_html": "The custom hashtags of the subscription has been changed to: ",
+        "set_hashtags_success_cleared": "The custom hashtags of the subscription has been cleared.",
+        "set_hashtags_failure_too_many": "Too many hashtags. Please remove some hashtags and retry."
     },
     "l10n_administration": {
         "cmd_test_usage_prompt_html": "Command usage: <code>/test RSS_URL entry_start_number(optional) entry_end_number(optional)</code>",
