--- a/src/i18n/yue.json
+++ b/src/i18n/yue.json
@@ -108,6 +108,7 @@
         "display_title_-1": "閂",
         "display_title_0": "自動",
         "style": "格式",
+        "set_custom_hashtags_button": "自訂 hashtag…",
         "set_length_limit_prompt": "請選擇長度限制。\n\n如果文章嘅長度超過限制或者無法喺單條訊息入邊傳送，就會透過 Telegraph 傳送。\n如果透過 Telegraph 傳送都失敗，就只會傳送佢嘅標題同來源。",
         "length_limit_only_effective_if_send_mode_auto": "只有傳送方式係自動嘅時候，長度限制先有用。"
     },
@@ -115,7 +116,8 @@
         "subscription_info": "訂閲資訊",
         "subscription_title": "自訂標題",
         "feed_url": "RSS URL",
-        "feed_title": "RSS 標題"
+        "feed_title": "RSS 標題",
+        "hashtags": "Hashtag"
     },
     "l10n_monitor_warn": {
         "feed_deactivated_warn": "監視任務已經連續失敗咗 100 次，對呢個 RSS 嘅訂閲已經畀閂咗。\n如果要開返佢，唔該用 /activate_subs 命令。"
@@ -168,8 +170,14 @@
         "set_interval_success_html": "訂閱嘅監視間隔已經改做 <b>%d 分鐘</b>。"
     },
     "l10n_cmd_set_title": {
-        "set_title_success_cleared": "訂閱的自訂標題已經刪咗。",
-        "cmd_set_title_usage_prompt_html": "命令用法: <code>/set_title 訂閲編號 標題</code>\n\n注: 忽略 <code>標題</code> 來删除自訂標題 (只有之前設定過先可以清除，唔係就會收到呢條提示) 。",
-        "set_title_success": "訂閱的自訂標題已經改做: "
+        "set_title_success_cleared": "訂閱嘅自訂標題已經刪咗。",
+        "cmd_set_title_usage_prompt_html": "命令用法: <code>/set_title 訂閲編號 標題</code>\n\n注: 忽略 <code>標題</code> 來刪除自訂標題 (只有之前設定過先可以刪除，唔係就會收到呢條提示) 。",
+        "set_title_success": "訂閱嘅自訂標題已經改做: "
+    },
+    "l10n_cmd_set_hashtags": {
+        "cmd_set_hashtags_usage_prompt_html": "命令用法: <code>/set_hashtags 訂閲編號 #hashtag1 #hashtag2 …</code>\n\n注: 如果唔畀 hashtag，已經喺度嘅 hashtag 會畀刪除 (只有之前設定過先可以刪除，唔係就會收到呢條提示) 。",
+        "set_hashtags_success_html": "訂閱嘅自訂 hashtag 已經改做: ",
+        "set_hashtags_success_cleared": "訂閱嘅自訂 hashtag 已經刪咗。",
+        "set_hashtags_failure_too_many": "Hashtag 太多喇，唔該刪緊啲再來過。"
     }
 }
